build: update the system to allow for release workflows

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -87,12 +87,26 @@ jobs:
                   echo "📦 Created build artifact: $(du -h build-artifact.zip | cut -f1)" >> $GITHUB_STEP_SUMMARY
 
             - name: Upload build artifact
-              uses: actions/upload-artifact@b4b15b8c7c6ac21ea08fcf65892d2ee8f75cf882 # v4.4.3
+              uses: actions/upload-artifact@330a01c490aca151604b8cf639adc76d48f6c5d4 # v5.0.0
               with:
                   name: build-artifact
                   path: build-artifact.zip
                   retention-days: 1
                   compression-level: 0 # Already compressed
+
+    trigger-release:
+        name: Trigger Release Workflow
+        needs: build
+        if: |
+            needs.build.outputs.deployment-type == 'production' ||
+            needs.build.outputs.deployment-type == 'next'
+        runs-on: ubuntu-latest
+        steps:
+            - name: Trigger release workflow
+              run: |
+                  echo "Release workflow will be triggered by workflow_run event" >> $GITHUB_STEP_SUMMARY
+                  echo "Deployment type: ${{ needs.build.outputs.deployment-type }}" >> $GITHUB_STEP_SUMMARY
+                  echo "Branch: ${{ needs.build.outputs.target-branch }}" >> $GITHUB_STEP_SUMMARY
 
     deploy-production:
         name: Deploy to Production
