--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -42,8 +42,6 @@ repos:
       rev: v1.37.1
       hooks:
           - id: yamllint
-            # args:
-            #     - --config-file=$(pwd)/.yamllint.yaml
 
     - repo: https://github.com/Yelp/detect-secrets
       rev: v1.5.0
@@ -81,7 +79,7 @@ repos:
             entry: mise run lint:check
             language: system
             pass_filenames: false
-          - id: cog check
+          - id: cog-check
             name: Cog Check
             stages: [commit-msg]
             entry: cog check
