--- a/.github/workflows/build-and-package.yaml
+++ b/.github/workflows/build-and-package.yaml
@@ -31,6 +31,10 @@ jobs:
                       mise.jdx.dev:443
                       objects.githubusercontent.com:443
                       registry.npmjs.org:443
+
+            - name: Checkout Repository
+              uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+
             - name: Setup and build
               uses: ./.github/actions/setup-and-build
               with:
