--- a/.github/workflows/build-and-package.yaml
+++ b/.github/workflows/build-and-package.yaml
@@ -47,6 +47,7 @@ jobs:
                   retention-days: 1
                   compression-level: 0
             - name: Capture artifact size
+              shell: bash
               id: size
               run: |
                   echo "artifact_size=$(du -h build-artifact.zip | cut -f1)" >> $GITHUB_OUTPUT
